## Process this file with automake to produce Makefile.in
##
## $Id: Makefile.am,v 1.3 2001/03/21 04:23:38 vchma Exp $

SUBDIRS = .
CLEANFILES = *~

lib_LIBRARIES = libUtilities.a

libUtilities_a_SOURCES = \
	Common.C \
	Timer.C \
	ProgressBar.C

noinst_HEADERS = \
	Array.h \
	Common.h \
	Op.h \
	ProgressBar.h \
	Timer.h \
	utility.hpp
